[project]
name = "backend"
version = "0.1.0"
description = "Personal Sensei backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langgraph>=1.2.5",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter. Strict by design.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["app"]

[tool.ruff.lint]
# Enable a broad, strict rule set. "No mercy."
select = ["ALL"]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "COM812", # trailing-comma-missing (handled by the formatter)
    "ISC001", # single-line-implicit-string-concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["T201"]               # allow print() in the CLI entry script
"app/**/__init__.py" = ["D104"]    # don't require docstrings in package __init__

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy — static type checking. Strict.
# ---------------------------------------------------------------------------
[tool.mypy]
files = ["app", "main.py"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
